--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -89,3 +89,77 @@ body {
     from{opacity: .4}
     to{opacity: 1}
 }
+
+.stock-item-box {
+    background-color: lightgray;
+    width: 250px;
+    border: 3px solid green;
+    padding: 15px;
+    margin: 25px;
+    display: inline-block;
+}
+
+.small-image {
+    width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.vertical-menu {
+    width: 300px;
+    float: right;
+}
+
+.vertical-menu a {
+    background-color: lightgray;
+    color: black;
+    display: block;
+    padding: 12px;
+}
+
+.vertical-menu a:hover {
+    background-color: dimgray;
+}
+
+.vertical-menu a.active {
+    background-color: green;
+    color: white;
+    text-align: center;
+    font-size: 22px;
+}
+
+.filter-container {
+    display: block;
+    position: relative;
+    padding-left: 70px;
+    padding-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    background-color: lightgray;
+}
+
+.filter-container input[type=checkbox] {
+    position: absolute;
+    cursor: pointer;
+    height: 16px;
+    width: 16px;
+    left: 20px;
+    top: 0px;
+}
+
+.filter-container input {
+    position: absolute;
+    cursor: pointer;
+    height: 25px;
+    width: 50px;
+    left: 5px;
+    top: -4px;
+}
+
+.vertical-menu input[type=submit] {
+    width: 297px;
+    font-size: 22px;
+    font-family: auto;
+    margin: 0;
+}
