--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -188,3 +188,93 @@ body {
 .cart-text {
     margin: 0 0 10px;
 }
+
+.cart-item-container input[type=submit] {
+    width: 140px;
+    background-color: green;
+    color: white;
+    padding: 10px;
+    margin: 0;
+    cursor: pointer;
+}
+
+/*.cart-item-container input[type=submit].change-number {*/
+/*    background-color: green;*/
+/*    color: white;*/
+/*    border-radius: 2em;*/
+/*    padding: 0.5em 0.8em;*/
+/*    width: 28px;*/
+/*    cursor: pointer;*/
+/*}*/
+
+.cart-item-container form {
+    display: inline-block;
+}
+
+.number-input {
+    display: inline-flex;
+}
+
+.number-input button {
+    background-color: white;
+    border:  1px solid black;
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.number-input button:before,
+.number-input button:after {
+    display: inline-block;
+    position: absolute;
+    content: '';
+    width: 1rem;
+    height: 2px;
+    background-color: black;
+    transform: translate(-50%, -50%);
+}
+
+.number-input button.plus:after {
+    transform: translate(-50%, -50%) rotate(90deg);
+}
+
+.number-input input[type=number] {
+    max-width: 3rem;
+    padding: .5rem;
+    border: none;
+    font-size: 1.5rem;
+    height: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.cart-item-container input[type=number] {
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
+
+.cart-item-container input[type=number]::-webkit-inner-spin-button,
+.cart-item-container input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
+
+.order-container {
+    width: 600px;
+}
+
+.order-container input{
+    width: 600px;
+    padding: 5px 0;
+    margin: 15px 0;
+}
+
+.order-container input[type=submit] {
+    width: 150px;
+    background-color: green;
+    color: white;
+    padding: 16px 32px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
