--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -278,3 +278,16 @@ body {
     margin: 4px 2px;
     cursor: pointer;
 }
+
+.order-list-container {
+    background-color: lightgray;
+}
+
+.order-list-container input[type=submit] {
+    width: 200px;
+    background-color: green;
+    color: white;
+    padding: 10px 25px;
+    margin: 0 0 20px 20px;
+    cursor: pointer;
+}
